# huub-noc-research

./: .gitignore  custom_search.patch  half_data  lit_stats.patch
Batchmark_init/: benchmark_noc.py  noc_int.mzn  noc_int_practice.mzn  noc_practice.mzn
Batchmark_init/benchmark_results/: details.csv  experiment_config.json  grouped_summary.csv  mismatches.csv  plot_chuffed_vs_noc_int_colored.py  plot_noc_vs_noc_int_colored.py  summary.csv
Model/: Untitled1.mzn  analyse_half_data.py  benchmark_noc.py  literal_stats_compare_results.csv  noc_int_practice.mzn  noc_int_practice.ozn  noc_practice.mzn  noc_practice.mzp  run_literal_stats_benchmark.py
Model/benchmark_results/: summary.csv
huub/: Cargo.toml  README.md  clippy.toml  rustfmt.toml
huub-noc/: Cargo.toml
huub/.github/workflows/: docs.yml  package.yml  test.yml
huub/crates/huub/: Cargo.toml
huub/crates/huub-cli/: Cargo.toml
huub/crates/huub-cli/benches/: flatzinc_bench.rs
huub/crates/huub-cli/corpus/: README.md  amaze3_2012_03_19.fzn.json  bool_indomain_max.fzn.json  bool_indomain_max.mzn  bool_indomain_max.sol  bool_indomain_min.fzn.json  bool_indomain_min.mzn  bool_indomain_min.sol  ccmcp_3_20_0.fzn.json  ccmcp_3_20_0.sol  jobshop_la02.sol  jobshop_la03.sol  jobshop_la04.sol  mrcpsp_j10_10_1.fzn.json  mrcpsp_j10_10_1.sol  mrcpsp_j10_10_2.fzn.json  mrcpsp_j10_10_2.sol  mrcpsp_j10_10_3.fzn.json  mrcpsp_j10_10_3.sol  peaceable_queens_n5_q3.fzn.json  peaceable_queens_n5_q3.json  peaceable_queens_n5_q3.sol  portal_10_9_10.fzn.json  portal_10_9_10.sol  radiation_i6_9.fzn.json  radiation_i8_9.fzn.json  rcpsp_01.fzn.json  rcpsp_01.sol  rcpsp_02.fzn.json  rcpsp_02.sol  rcpsp_03.fzn.json  rcpsp_03.sol  recompile_mzn.py  steiner_t3_k4_N8.fzn.json  steiner_t6_k6_N7.fzn.json  svrp_s4_v2_c3.fzn.json  svrp_s4_v2_c3.sol  unbounded.fzn.json  unbounded.sol  unify_with_view_3.fzn.json  (+3 more)
huub/crates/huub-cli/src/: interned_str.rs  lib.rs  main.rs  trace.rs
huub/crates/huub-cli/tests/: flatzinc_tests.rs
huub/crates/huub-cli/tests/helpers/: mod.rs
huub/crates/huub/src/: actions.rs  constraints.rs  helpers.rs  lib.rs  lower.rs  model.rs  solver.rs  tests.rs  views.rs
huub/crates/huub/src/actions/: boolean.rs  initialization.rs  integer.rs
huub/crates/huub/src/constraints/: bool_array_element.rs  cumulative.rs  disjunctive.rs  int_abs.rs  int_array_element.rs  int_array_minimum.rs  int_div.rs  int_linear.rs  int_mul.rs  int_no_overlap.rs  int_pow.rs  int_set_contains.rs  int_table.rs  int_unique.rs  int_value_precede.rs  nocq_practice.rs
huub/crates/huub/src/helpers/: bytes.rs  matrix.rs  overflow.rs  private.rs  true_type.rs
huub/crates/huub/src/model/: decision.rs  deserialize.rs  expressions.rs  initilization_context.rs  view.rs
huub/crates/huub/src/model/decision/: boolean.rs  integer.rs
huub/crates/huub/src/model/deserialize/: flatzinc.rs
huub/crates/huub/src/model/expressions/: bool_formula.rs  element.rs  linear.rs
huub/crates/huub/src/model/view/: boolean.rs  integer.rs
huub/crates/huub/src/parity/: game.rs  loader.rs  mod.rs  no_opponent_cycle.rs  no_opponent_cycle_with_int.rs
huub/crates/huub/src/solver/: activation_list.rs  bool_to_int.rs  branchers.rs  decision.rs  engine.rs  initialization_context.rs  queue.rs  solution.rs  solving_context.rs  trail.rs  view.rs
huub/crates/huub/src/solver/decision/: boolean.rs  integer.rs
huub/crates/huub/src/solver/view/: boolean.rs  integer.rs
huub/crates/huub/src/views/: linear_bool_view.rs  linear_view.rs  offset_view.rs
huub/docs/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
huub/docs/src/content/docs/: index.mdx
huub/docs/src/content/docs/guides/: example.md
huub/docs/src/content/docs/reference/: example.md
huub/docs/src/styles/: fonts.css
huub/share/minizinc/huub/: fzn_cumulative.mzn  fzn_diffn.mzn  fzn_diffn_k.mzn  fzn_diffn_nonstrict.mzn  fzn_diffn_nonstrict_k.mzn  fzn_disjunctive_strict.mzn  fzn_noc.mzn  fzn_noc_int.mzn  fzn_regular.mzn  fzn_seq_precede_chain_int.mzn  fzn_value_precede_chain_int.mzn  huub.mzn  redefinitions-2.0.mzn
huub/share/minizinc/solvers/: huub.msc
huub_noc_test/: huub_noc_test.py
tune_cadical_options/: tune_cadical_options.py
(+16 files in other folders)
