[package]
name = "huub-cli"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[[bin]]
name = "huub"
path = "src/main.rs"

[[bench]]
name = "flatzinc_bench"
harness = false

[dependencies]
ctrlc = { workspace = true }
flatzinc-serde = { workspace = true }
humantime = { workspace = true }
huub = { path = "../huub", features = ["flatzinc"] }
mimalloc = { workspace = true }
pico-args = { workspace = true, features = ["combined-flags"] }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
expect-test = { workspace = true }

[lints]
workspace = true
