[package]
name = "huub"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
bon = { workspace = true }
dyn-clone = { workspace = true }
flatzinc-serde = { workspace = true, optional	= true }
itertools = { workspace = true }
pindakaas = { workspace = true, features = ["external-propagation"] }
rangelist = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
tracing-test = { workspace = true }

[lints]
workspace = true

[features]
flatzinc = ["flatzinc-serde"]
